Fix whitespace

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,4 +1,12 @@
 /*----------------------------------------*/
+/* Home page typography
+/*----------------------------------------*/
+
+section {
+  margin-bottom: 60px;
+}
+
+/*----------------------------------------*/
 /* Featured grid
 /*----------------------------------------*/
 
@@ -128,8 +136,7 @@
 
 .article.tile {
   flex: 0 32%;
-  margin-bottom: 2%;
-  /* (100-32*3)/2 */
+  margin-bottom: 40px;
 }
 
 .tiles .article.tile a,
